@@ -102,7 +102,12 @@ sub __TOKENIZER__on_char {
 sub __TOKENIZER__commit {
 	my $t = $_[1];
 
-	# Get the rest of the line
+	if ( $t->__current_token_is_forced_word ) {
+		# Forced to be a word. Done.
+		return PPI::Token::Word->__TOKENIZER__commit($t);
+	}
+
+	# Capture the rest of the token
 	pos $t->{line} = $t->{line_cursor};
 	if ( $t->{line} !~ m/\G(v\d+(?:\.\d+)*)/gc ) {
 		# This was not a v-string after all (it's a word)
